Removed PlayerTurnManager dependencies